# GTN

./: .gitignore  AGENT.md  AIM_RUN_INSTRUCTION.md  ANALYSIS_MANIFEST.txt  ANALYSIS_SUMMARY.txt  BATCHMOVINGENVIRONMENT_FIX_SUMMARY.md  BATCHMOVINGENVIRONMENT_USER_GUIDE.md  BATCH_MOVING_ENVIRONMENT.md  BATCH_MOVING_ENVIRONMENT_DEBUG_SUMMARY.md  CLUSTER_WORKFLOW.md  CMPO2_CACHING_FIX_SUMMARY.md  CMPO2_IMPLEMENTATION_SUMMARY.md  CMPO2_NTN_IMPLEMENTATION.md  ENVIRONMENT_CACHING_SUMMARY.md  ENVIRONMENT_FORWARD_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_MPS_MPO2_RESULTS.md  GTN_ARCHITECTURE_ANALYSIS.md  GTN_DETAILED_EXAMPLES.md  GTN_QUICK_REFERENCE.md  IMPLEMENT_CPD.md  MPS_MPO2_SUMMARY.md  NONAME_28380843.out  NONAME_28610591.out  NTN_ANALYSIS_INDEX.md  NTN_CODE_COMPARISON.md  NTN_COMPARISON.md  NTN_DETAILED_ANALYSIS.md  NTN_MPS_GUIDE.md  NTN_SUMMARY.txt  NTN_VISUAL_COMPARISON.md  OOM.md  PLAN.md  README.md  README_ANALYSIS.md  REFACTORING_SUMMARY.md  RUN_PY_ANALYSIS.md  RUN_PY_CODE_EXAMPLES.md  RUN_PY_INDEX.md  SESSION_SUMMARY.md  (+120 more)
.aim/: run_metadata.sqlite
.docs-data/: documents.db  documents.db-shm  installation.id
.serena/: project.yml
conf/: config.yaml
csvs/: nic.csv
cudatest/: LMPO2-seed42.json  LMPO2TypeI_GTN-seed42.json  MMPO2-seed42.json  MMPO2TypeI_GTN-seed42.json  MPO2-seed42.json  MPO2TypeI_GTN-seed42.json  summary.json
cudatestntn/: LMPO2-seed42.json  LMPO2TypeI-seed42.json  MMPO2-seed42.json  MMPO2TypeI-seed42.json  MPO2-seed42.json  MPO2TypeI-seed42.json  summary.json
docs/: CLUSTER_USAGE.md  COMPREHENSIVE_GUIDE.md  TYPE_I_ENSEMBLES.md
experiment_logs/: abalone_MPO2_L2_d10_j0.1_s123.json  abalone_MPO2_L2_d10_j0.1_s256.json  abalone_MPO2_L2_d10_j0.1_s42.json  abalone_MPO2_L2_d10_j0.1_s7.json  abalone_MPO2_L2_d10_j0.1_s999.json  abalone_MPO2_L2_d10_j1_s123.json  abalone_MPO2_L2_d10_j1_s256.json  abalone_MPO2_L2_d10_j1_s42.json  abalone_MPO2_L2_d10_j1_s7.json  abalone_MPO2_L2_d10_j1_s999.json  abalone_MPO2_L2_d10_j5_s123.json  abalone_MPO2_L2_d10_j5_s256.json  abalone_MPO2_L2_d10_j5_s42.json  abalone_MPO2_L2_d10_j5_s7.json  abalone_MPO2_L2_d10_j5_s999.json  abalone_MPO2_L2_d4_j0.1_s123.json  abalone_MPO2_L2_d4_j0.1_s256.json  abalone_MPO2_L2_d4_j0.1_s42.json  abalone_MPO2_L2_d4_j0.1_s7.json  abalone_MPO2_L2_d4_j0.1_s999.json  abalone_MPO2_L2_d4_j1_s123.json  abalone_MPO2_L2_d4_j1_s256.json  abalone_MPO2_L2_d4_j1_s42.json  abalone_MPO2_L2_d4_j1_s7.json  abalone_MPO2_L2_d4_j1_s999.json  (+3207 more)
(+26314 files in other folders)
